--- a/resources/ui/widget/templates/SelectRegisteredGitRepository.html
+++ b/resources/ui/widget/templates/SelectRegisteredGitRepository.html
@@ -1,4 +1,4 @@
-<div>
+<div class="rtcGitConnectorSelectRegisteredGitRepository">
     <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Select a Git Repository</label>
     <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository"
         name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList">
