--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -112,6 +112,7 @@
     border-right: 0px;
     border-style: solid;
     border-color: #cacaca;
+    transition: all 0.3s ease-out;
 }
 
 .rtcGitConnectorSelectLinkType .linkTypeItem.lastLinkTypeItem {
