--- a/resources/ui/widget/templates/SelectRegisteredGitRepository.html
+++ b/resources/ui/widget/templates/SelectRegisteredGitRepository.html
@@ -1,5 +1,5 @@
 <div class="rtcGitConnectorSelectRegisteredGitRepository">
-    <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Select a Git Repository</label>
+    <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Registered Git Repositories</label>
     <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository"
         name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList">
     </div>
