--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -127,7 +127,7 @@
 }
 
 .rtcGitConnectorSelectLinkType .linkTypeItem:hover {
-    background-color: lightgray;
+    background-color: #cacaca;
 }
 
 .rtcGitConnectorSelectLinkType .linkTypeItem.selected {
@@ -182,6 +182,7 @@ button.viewAndSelectSearchButton[disabled] {
 }
 
 .rtcGitConnectorViewAndSelectList {
+    box-sizing: border-box;
     flex-grow: 1;
     width: 100%;
     height: 200px;
@@ -192,7 +193,7 @@ button.viewAndSelectSearchButton[disabled] {
 
 .rtcGitConnectorViewAndSelectListItem {
     display: flex;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid #cacaca;
     padding: .2em;
     font-size: 1em;
     cursor: pointer;
@@ -204,7 +205,7 @@ button.viewAndSelectSearchButton[disabled] {
 }
 
 .rtcGitConnectorViewAndSelectListItem:hover {
-    background-color: lightgray;
+    background-color: #cacaca;
 }
 
 .rtcGitConnectorViewAndSelectListItem.selected {
@@ -262,10 +263,13 @@ button.viewAndSelectSearchButton[disabled] {
 }
 
 .rtcGitConnectorViewAndSelectDetails {
+    box-sizing: border-box;
     flex-grow: 1;
-    width: 100%;
+    width: calc(100% - 20px);
     height: 200px;
+    padding: 10px;
     margin-left: 10px;
+    border: 1px solid #cacaca;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -275,7 +279,7 @@ button.viewAndSelectSearchButton[disabled] {
     font-size: 1em;
     padding-top: .5em;
     padding-bottom: .5em;
-    border-bottom: 1px dashed lightgray;
+    border-bottom: 1px dashed #cacaca;
 }
 
 .rtcGitConnectorViewAndSelectDetailsSpan span {
