--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -3,7 +3,7 @@
         <div class="rtcGitConnectorSelectLinkType">
             <div class="linkTypeItem" data-link-type="COMMIT">Commits</div>
             <div class="linkTypeItem" data-link-type="ISSUE">Issues</div>
-            <div class="linkTypeItem lastLinkTypeItem" data-link-type="REQUEST">Requests</div>
+            <div class="linkTypeItem" data-link-type="REQUEST">Requests</div>
         </div>
     </div>
 
