--- a/resources/ui/widget/templates/ViewCommitsToLink.html
+++ b/resources/ui/widget/templates/ViewCommitsToLink.html
@@ -1,6 +1,5 @@
 <div>
-    <div id="viewCommitsToLinkContainer" style="display: none;">
-        <br />
+    <div id="viewCommitsToLinkContainer" class="viewItemsToLinkContainer" style="display: none;">
         <label class="rtcGitConnectorLabelText">Commits to link</label>
         <div class="rtcGitConnectorViewItemsToLinkList"></div>
     </div>
