--- a/resources/ui/widget/templates/ViewRequestsToLink.html
+++ b/resources/ui/widget/templates/ViewRequestsToLink.html
@@ -1,6 +1,5 @@
 <div>
-    <div id="viewRequestsToLinkContainer" style="display: none;">
-        <br />
+    <div id="viewRequestsToLinkContainer" class="viewItemsToLinkContainer" style="display: none;">
         <label class="rtcGitConnectorLabelText">Requests to link</label>
         <div class="rtcGitConnectorViewItemsToLinkList"></div>
     </div>
