--- a/resources/ui/widget/templates/ViewIssuesToLink.html
+++ b/resources/ui/widget/templates/ViewIssuesToLink.html
@@ -1,6 +1,5 @@
 <div>
-    <div id="viewIssuesToLinkContainer" style="display: none;">
-        <br />
+    <div id="viewIssuesToLinkContainer" class="viewItemsToLinkContainer" style="display: none;">
         <label class="rtcGitConnectorLabelText">Issues to link</label>
         <div class="rtcGitConnectorViewItemsToLinkList"></div>
     </div>
