Use the default button styles instead of custom styles

--- a/resources/ui/widget/templates/ViewAndSelectCommits.html
+++ b/resources/ui/widget/templates/ViewAndSelectCommits.html
@@ -8,10 +8,10 @@
         data-dojo-attach-point="commitsSearchInput"
         data-dojo-props="trim:true">
     <button id="viewAndSelectCommitsSearchButton"
-            class="viewAndSelectSearchButton"
+            class="primary-button"
             type="button">Search</button>
     <button id="viewAndSelectCommitsSearchClearButton"
-            class="viewAndSelectSearchButton viewAndSelectSearchClearButton"
+            class="secondary-button"
             type="button">Clear</button>
     <br />
     <input id="viewAndSelectCommitsFilterInput"
@@ -21,7 +21,7 @@
         data-dojo-attach-point="commitsFilterInput"
         data-dojo-props="trim:true, intermediateChanges:true">
     <button id="viewAndSelectCommitsFilterClearButton"
-        class="viewAndSelectSearchButton viewAndSelectSearchClearButton"
+        class="secondary-button"
         type="button">Clear</button>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectCommitsWrapper">
         <div class="rtcGitConnectorViewAndSelectList"></div>
