--- a/resources/ui/widget/templates/ViewAndSelectIssues.html
+++ b/resources/ui/widget/templates/ViewAndSelectIssues.html
@@ -8,10 +8,10 @@
         data-dojo-attach-point="issuesSearchInput"
         data-dojo-props="trim:true">
     <button id="viewAndSelectIssuesSearchButton"
-            class="viewAndSelectSearchButton"
+            class="primary-button"
             type="button">Search</button>
     <button id="viewAndSelectIssuesSearchClearButton"
-            class="viewAndSelectSearchButton viewAndSelectSearchClearButton"
+            class="secondary-button"
             type="button">Clear</button>
     <br />
     <input id="viewAndSelectIssuesFilterInput"
@@ -21,7 +21,7 @@
         data-dojo-attach-point="issuesFilterInput"
         data-dojo-props="trim:true, intermediateChanges:true">
     <button id="viewAndSelectIssuesFilterClearButton"
-        class="viewAndSelectSearchButton viewAndSelectSearchClearButton"
+        class="secondary-button"
         type="button">Clear</button>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectIssuesWrapper">
         <div class="rtcGitConnectorViewAndSelectList"></div>
