--- a/resources/ui/widget/templates/ViewAndSelectCommits.html
+++ b/resources/ui/widget/templates/ViewAndSelectCommits.html
@@ -1,30 +1,38 @@
 <div>
     <label class="rtcGitConnectorLabelText">Recent commits</label>
-    <br />
-    <input id="viewAndSelectCommitsSearchInput"
-        class="viewAndSelectSearchInput"
-        placeholder="Search commits by SHA..."
-        data-dojo-type="dijit/form/TextBox"
-        data-dojo-attach-point="commitsSearchInput"
-        data-dojo-props="trim:true">
-    <button id="viewAndSelectCommitsSearchButton"
-            class="primary-button"
-            type="button">Search</button>
-    <button id="viewAndSelectCommitsSearchClearButton"
-            class="secondary-button"
-            type="button">Clear</button>
-    <br />
-    <input id="viewAndSelectCommitsFilterInput"
-        class="viewAndSelectFilterInput"
-        placeholder="Filter commits by message, author, SHA..."
-        data-dojo-type="dijit/form/TextBox"
-        data-dojo-attach-point="commitsFilterInput"
-        data-dojo-props="trim:true, intermediateChanges:true">
-    <button id="viewAndSelectCommitsFilterClearButton"
-        class="secondary-button"
-        type="button">Clear</button>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectCommitsWrapper">
-        <div class="rtcGitConnectorViewAndSelectList"></div>
+        <div class="rtcGitConnectorViewAndSelectList">
+            <div class="rtcGitConnectorViewAndSelectListControls">
+                <div class="rtcGitConnectorViewAndSelectListControl">
+                    <div class="viewAndSelectControlLabel">Search: </div>
+                    <input id="viewAndSelectCommitsSearchInput"
+                        class="viewAndSelectSearchInput"
+                        placeholder="Search commits by SHA..."
+                        data-dojo-type="dijit/form/TextBox"
+                        data-dojo-attach-point="commitsSearchInput"
+                        data-dojo-props="trim:true">
+                    <button id="viewAndSelectCommitsSearchButton"
+                        class="primary-button viewAndSelectSearchButton"
+                        type="button">Search</button>
+                    <button id="viewAndSelectCommitsSearchClearButton"
+                        class="secondary-button"
+                        type="button">Clear</button>
+                </div>
+                <div class="rtcGitConnectorViewAndSelectListControl">
+                    <div class="viewAndSelectControlLabel">Filter: </div>
+                    <input id="viewAndSelectCommitsFilterInput"
+                        class="viewAndSelectFilterInput"
+                        placeholder="Filter commits by message, author, SHA..."
+                        data-dojo-type="dijit/form/TextBox"
+                        data-dojo-attach-point="commitsFilterInput"
+                        data-dojo-props="trim:true, intermediateChanges:true">
+                    <button id="viewAndSelectCommitsFilterClearButton"
+                        class="secondary-button"
+                        type="button">Clear</button>
+                </div>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItems"></div>
+        </div>
         <div class="rtcGitConnectorViewAndSelectDetails"></div>
     </div>
 </div>
