--- a/resources/ui/widget/templates/ViewAndSelectRequests.html
+++ b/resources/ui/widget/templates/ViewAndSelectRequests.html
@@ -1,30 +1,38 @@
 <div>
     <label class="rtcGitConnectorLabelText">Recent requests</label>
-    <br />
-    <input id="viewAndSelectRequestsSearchInput"
-        class="viewAndSelectSearchInput"
-        placeholder="Search requests by id..."
-        data-dojo-type="dijit/form/TextBox"
-        data-dojo-attach-point="requestsSearchInput"
-        data-dojo-props="trim:true">
-    <button id="viewAndSelectRequestsSearchButton"
-            class="primary-button"
-            type="button">Search</button>
-    <button id="viewAndSelectRequestsSearchClearButton"
-            class="secondary-button"
-            type="button">Clear</button>
-    <br />
-    <input id="viewAndSelectRequestsFilterInput"
-        class="viewAndSelectFilterInput"
-        placeholder="Filter requests by title, author, state, id..."
-        data-dojo-type="dijit/form/TextBox"
-        data-dojo-attach-point="requestsFilterInput"
-        data-dojo-props="trim:true, intermediateChanges:true">
-    <button id="viewAndSelectRequestsFilterClearButton"
-        class="secondary-button"
-        type="button">Clear</button>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectRequestsWrapper">
-        <div class="rtcGitConnectorViewAndSelectList"></div>
+        <div class="rtcGitConnectorViewAndSelectList">
+            <div class="rtcGitConnectorViewAndSelectListControls">
+                <div class="rtcGitConnectorViewAndSelectListControl">
+                    <div class="viewAndSelectControlLabel">Search: </div>
+                    <input id="viewAndSelectRequestsSearchInput"
+                        class="viewAndSelectSearchInput"
+                        placeholder="Search requests by id..."
+                        data-dojo-type="dijit/form/TextBox"
+                        data-dojo-attach-point="requestsSearchInput"
+                        data-dojo-props="trim:true">
+                    <button id="viewAndSelectRequestsSearchButton"
+                            class="primary-button viewAndSelectSearchButton"
+                            type="button">Search</button>
+                    <button id="viewAndSelectRequestsSearchClearButton"
+                            class="secondary-button"
+                            type="button">Clear</button>
+                </div>
+                <div class="rtcGitConnectorViewAndSelectListControl">
+                    <div class="viewAndSelectControlLabel">Filter: </div>
+                    <input id="viewAndSelectRequestsFilterInput"
+                        class="viewAndSelectFilterInput"
+                        placeholder="Filter requests by title, author, state, id..."
+                        data-dojo-type="dijit/form/TextBox"
+                        data-dojo-attach-point="requestsFilterInput"
+                        data-dojo-props="trim:true, intermediateChanges:true">
+                    <button id="viewAndSelectRequestsFilterClearButton"
+                        class="secondary-button"
+                        type="button">Clear</button>
+                </div>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItems"></div>
+        </div>
         <div class="rtcGitConnectorViewAndSelectDetails"></div>
     </div>
 </div>
