Use uppercase in titles

--- a/resources/ui/widget/templates/ViewAndSelectCommits.html
+++ b/resources/ui/widget/templates/ViewAndSelectCommits.html
@@ -1,5 +1,5 @@
 <div>
-    <label class="rtcGitConnectorLabelText">Recent commits</label>
+    <label class="rtcGitConnectorLabelText">Recent Commits</label>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectCommitsWrapper">
         <div class="rtcGitConnectorViewAndSelectList">
             <div class="rtcGitConnectorViewAndSelectListControls">
