--- a/resources/ui/widget/templates/ViewAndSelectIssues.html
+++ b/resources/ui/widget/templates/ViewAndSelectIssues.html
@@ -1,5 +1,5 @@
 <div>
-    <label class="rtcGitConnectorLabelText">Recent issues</label>
+    <label class="rtcGitConnectorLabelText">Recent Issues</label>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectIssuesWrapper">
         <div class="rtcGitConnectorViewAndSelectList">
             <div class="rtcGitConnectorViewAndSelectListControls">
