--- a/resources/ui/widget/templates/ViewAndSelectRequests.html
+++ b/resources/ui/widget/templates/ViewAndSelectRequests.html
@@ -1,5 +1,5 @@
 <div>
-    <label class="rtcGitConnectorLabelText">Recent requests</label>
+    <label class="rtcGitConnectorLabelText">Recent Requests</label>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectRequestsWrapper">
         <div class="rtcGitConnectorViewAndSelectList">
             <div class="rtcGitConnectorViewAndSelectListControls">
