--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -34,7 +34,12 @@
     </div>
 
     <div id="rtcGitConnectorFullPageLoadingOverlay" style="display: none;">
-        <div style="position: fixed; width: 80vw;">Saving...</div>
+        <div id="rtcGitConnectorFullPageLoadingOverlayContent" style="position: fixed; width: 80vw;">
+            <span>&nbsp;</span>
+            <span id="rtcGitConnectorSavingSpinnerIcon" style="font-size: 10em;"></span>
+            <span style="font-size: initial;">Please wait while your changes are being saved</span>
+            <span>&nbsp;</span>
+        </div>
     </div>
 
     <div data-dojo-type="dijit/Dialog" data-dojo-attach-point="getAccessTokenDialog" title="Save access token" id="getAndSaveAccessTokenDialog">
