--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <p id="errorLoadingDataFromHostContainer" class="rtcGitConnectorError" style="display: none;"></p>
+    <p id="errorLoadingDataFromHostContainer" class="rtcGitConnectorMessage rtcGitConnectorMessageError" style="display: none;"></p>
 
     <div class="rtcGitConnectorViewAndSelectContainer" data-link-type="COMMIT" style="display: none;">
         <div data-dojo-attach-point="viewAndSelectCommits"
