--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -50,6 +50,32 @@
     color: red;
 }
 
+.rtcGitConnectorMessage {
+    display: block;
+    padding: 6px;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.rtcGitConnectorMessageInfo {
+    background-color: #d9edf7;
+    /* border-color: #bce8f1; */
+    color: #31708f;
+}
+
+.rtcGitConnectorMessageWarning {
+    background-color: #fcf8e3;
+    /* border-color: #faebcc; */
+    color: #8a6d3b;
+}
+
+.rtcGitConnectorMessageError {
+    background-color: #f2dede;
+    /* border-color: #ebccd1; */
+    color: #a94442;
+}
+
 .rtcGitConnectorLabelText {
     display: inline-block;
     margin-bottom: .5em;
