--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -25,15 +25,15 @@
     </div>
 
     <div class="rtcGitConnectorListsToLinkContainer">
-        <div class="rtcGitConnectorListToLink">
+        <div id="rtcGitConnectorCommitsListToLink" class="rtcGitConnectorListToLink">
             <div data-dojo-attach-point="viewCommitsToLink"
                 data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewCommitsToLink"></div>
         </div>
-        <div class="rtcGitConnectorListToLink">
+        <div id="rtcGitConnectorIssuesListToLink" class="rtcGitConnectorListToLink">
             <div data-dojo-attach-point="viewIssuesToLink"
                 data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewIssuesToLink"></div>
         </div>
-        <div class="rtcGitConnectorListToLink">
+        <div id="rtcGitConnectorRequestsListToLink" class="rtcGitConnectorListToLink">
             <div data-dojo-attach-point="viewRequestsToLink"
                 data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewRequestsToLink"></div>
         </div>
