--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -92,6 +92,7 @@
 }
 
 .rtcGitConnectorSelectList {
+    width: calc(100% - 201px);
     flex-grow: 1;
     border-top: 0px;
     border-bottom: 0px;
