Fix the loading overlay styles

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -371,6 +371,12 @@
     line-height: 20vh;
 }
 
+#rtcGitConnectorFullPageLoadingOverlayContent {
+    position: fixed;
+    width: 80vw;
+    bottom: 0;
+}
+
 #rtcGitConnectorFullPageLoadingOverlayContent span {
     display: block;
 }
