--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -34,7 +34,7 @@
     </div>
 
     <div id="rtcGitConnectorFullPageLoadingOverlay" style="display: none;">
-        <div id="rtcGitConnectorFullPageLoadingOverlayContent" style="position: fixed; width: 80vw;">
+        <div id="rtcGitConnectorFullPageLoadingOverlayContent">
             <span>&nbsp;</span>
             <span id="rtcGitConnectorSavingSpinnerIcon" style="font-size: 10em;"></span>
             <span style="font-size: initial;">Please wait while your changes are being saved</span>
