Align save and cancel buttons to the right

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -43,7 +43,7 @@
 .rtcGitConnectorActionButtons {
     position: absolute;
     bottom: 0;
-    right: 1em;
+    right: 0;
     font-size: 1em;
 }
 
