Add a link to the wiki for when there are no registered git repositories

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -5,7 +5,7 @@
         data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectLinkType"></div>
 
     <div id="noRegisteredGitRepositoriesContainer" style="display: none;">
-        <p class="rtcGitConnectorMessage rtcGitConnectorMessageWarning">Please register a git repository in this project area. More info...</p>
+        <p class="rtcGitConnectorMessage rtcGitConnectorMessageWarning">Please register a git repository in this project area. For instructions, please see the <a href="https://github.com/jazz-community/rtc-git-connector/wiki/3.4-Git-Repository-Registration">Git Repository Registration Wiki page</a>.</p>
     </div>
 
     <div id="noGitRepositorySelectedContainer" style="display: none;">
