--- a/resources/ui/widget/components/ViewAndSelectRequests/ViewAndSelectRequests.html
+++ b/resources/ui/widget/components/ViewAndSelectRequests/ViewAndSelectRequests.html
@@ -33,6 +33,7 @@
             </div>
             <div class="rtcGitConnectorViewAndSelectListItems"></div>
         </div>
-        <div class="rtcGitConnectorViewAndSelectDetails"></div>
+        <div data-dojo-attach-point="detailsPane"
+            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.detailsPane"></div>
     </div>
 </div>
