Add attach points to the list item

--- a/resources/ui/widget/components/ListItem/ListItem.html
+++ b/resources/ui/widget/components/ListItem/ListItem.html
@@ -1,1 +1,7 @@
-<div class="rtcGitConnectorViewAndSelectListItem"></div>
+<div class="rtcGitConnectorViewAndSelectListItem" data-dojo-attach-point="listItem">
+    <div class="rtcGitConnectorViewAndSelectListItemButton" data-dojo-attach-point="itemButton"></div>
+    <div class="rtcGitConnectorViewAndSelectListItemContent" data-dojo-attach-point="itemContent">
+        <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine" data-dojo-attach-point="firstLine"></span>
+        <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine" data-dojo-attach-point="secondLine"></span>
+    </div>
+</div>
