--- a/resources/ui/widget/components/ListItem/ListItem.html
+++ b/resources/ui/widget/components/ListItem/ListItem.html
@@ -1,6 +1,6 @@
 <div class="rtcGitConnectorViewAndSelectListItem" data-dojo-attach-point="listItem">
-    <div class="rtcGitConnectorViewAndSelectListItemButton" data-dojo-attach-point="itemButton"></div>
-    <div class="rtcGitConnectorViewAndSelectListItemContent" data-dojo-attach-point="itemContent">
+    <div class="rtcGitConnectorViewAndSelectListItemButton" data-dojo-attach-point="itemButton" data-dojo-attach-event="onclick:_onButtonClick"></div>
+    <div class="rtcGitConnectorViewAndSelectListItemContent" data-dojo-attach-point="itemContent" data-dojo-attach-event="onclick:_onContentClick">
         <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine" data-dojo-attach-point="firstLine"></span>
         <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine" data-dojo-attach-point="secondLine"></span>
     </div>
