Use the ListItem widget in ViewAndSelectCommits

--- a/resources/ui/widget/components/ViewAndSelectCommits/ViewAndSelectCommits.html
+++ b/resources/ui/widget/components/ViewAndSelectCommits/ViewAndSelectCommits.html
@@ -31,7 +31,7 @@
                         type="button">Clear</button>
                 </div>
             </div>
-            <div class="rtcGitConnectorViewAndSelectListItems"></div>
+            <div class="rtcGitConnectorViewAndSelectListItems" data-dojo-attach-point="listItemsContainer"></div>
         </div>
         <div data-dojo-attach-point="detailsPane"
             data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.detailsPane"></div>
