Use the ListItem widget in ViewCommitsToLink

--- a/resources/ui/widget/components/ViewCommitsToLink/ViewCommitsToLink.html
+++ b/resources/ui/widget/components/ViewCommitsToLink/ViewCommitsToLink.html
@@ -1,6 +1,6 @@
 <div>
     <div id="viewCommitsToLinkContainer" class="viewItemsToLinkContainer" style="display: none;">
         <label class="rtcGitConnectorLabelText">Commits to link</label>
-        <div class="rtcGitConnectorViewItemsToLinkList"></div>
+        <div class="rtcGitConnectorViewItemsToLinkList" data-dojo-attach-point="listItemsContainer"></div>
     </div>
 </div>
