--- a/resources/ui/widget/components/ViewRequestsToLink/ViewRequestsToLink.html
+++ b/resources/ui/widget/components/ViewRequestsToLink/ViewRequestsToLink.html
@@ -1,6 +1,6 @@
 <div>
     <div id="viewRequestsToLinkContainer" class="viewItemsToLinkContainer" style="display: none;">
         <label class="rtcGitConnectorLabelText">Requests to link</label>
-        <div class="rtcGitConnectorViewItemsToLinkList"></div>
+        <div class="rtcGitConnectorViewItemsToLinkList" data-dojo-attach-point="listItemsContainer"></div>
     </div>
 </div>
