--- a/resources/ui/widget/components/NewWorkItemList/NewWorkItemList.css
+++ b/resources/ui/widget/components/NewWorkItemList/NewWorkItemList.css
@@ -11,3 +11,12 @@
     font-weight: bold;
     color: #666666;
 }
+
+.rtcGitConnectorNewWorkItemListRow {
+    display: block;
+    padding-bottom: 5px;
+}
+
+.rtcGitConnectorNewWorkItemListRow:hover {
+    background-color: #fedda8;
+}
