Add some basic layout

--- a/resources/ui/widget/components/SelectLinkType/SelectLinkType.html
+++ b/resources/ui/widget/components/SelectLinkType/SelectLinkType.html
@@ -24,6 +24,8 @@
             data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectCommits"></div>
     </div>
 
+    <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemAttributes"></div>
+
     <div class="rtcGitConnectorListsToLinkContainer">
         <div id="rtcGitConnectorIssuesListToLink" class="rtcGitConnectorListToLink">
             <div data-dojo-attach-point="viewIssuesToLink"
