--- a/resources/ui/widget/components/SetNewWorkItemAttributes/SetNewWorkItemAttributes.html
+++ b/resources/ui/widget/components/SetNewWorkItemAttributes/SetNewWorkItemAttributes.html
@@ -1,4 +1,4 @@
-<div>
+<div style="display: none;">
     <div id="rtcGitConnectorSetNewWorkItemAttributes" class="com-ibm-team-workitem">
         <div class="workItemEditor" data-dojo-attach-point="attributesContainer"></div>
     </div>
