Disable the save buttons when there's nothing to save

--- a/resources/ui/widget/components/MainLayout/MainLayout.html
+++ b/resources/ui/widget/components/MainLayout/MainLayout.html
@@ -28,8 +28,8 @@
     <br />
 
     <div class="rtcGitConnectorActionButtons">
-        <button id="rtcGitConnectorSaveButton" class="primary-button" type="button">Save</button>
-        <button id="rtcGitConnectorSaveAndCloseButton" class="primary-button" type="button">Save and Close</button>
+        <button id="rtcGitConnectorSaveButton" class="primary-button" type="button" disabled>Save</button>
+        <button id="rtcGitConnectorSaveAndCloseButton" class="primary-button" type="button" disabled>Save and Close</button>
         <button id="rtcGitConnectorCancelButton" class="secondary-button" type="button">Cancel</button>
     </div>
 
