Give the buttons a fixed height to fix centering

--- a/resources/ui/widget/components/ListItem/ListItem.css
+++ b/resources/ui/widget/components/ListItem/ListItem.css
@@ -30,7 +30,7 @@
 
 .rtcGitConnectorViewAndSelectListItemButton {
     width: 2em;
-    height: 100%;
+    height: 1em;
     margin: auto .3em;
     font-size: 1.5em;
     text-align: center;
