--- a/resources/ui/widget/components/SelectItemMessage/SelectItemMessage.html
+++ b/resources/ui/widget/components/SelectItemMessage/SelectItemMessage.html
@@ -1,2 +1,5 @@
-<div class="rtcGitConnectorViewAndSelectContainer rtcGitConnectorSelectItemMessage"  data-dojo-attach-point="messageNode">
+<div>
+    <div class="rtcGitConnectorSelectItemMessage"
+        data-dojo-attach-point="messageNode">
+    </div>
 </div>
