Style the message with an arrow

--- a/resources/ui/widget/components/SelectItemMessage/SelectItemMessage.html
+++ b/resources/ui/widget/components/SelectItemMessage/SelectItemMessage.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="rtcGitConnectorSelectItemMessage"
+    <div class="rtcGitConnectorSelectItemMessage rtcGitConnectorMessage rtcGitConnectorMessageInfo"
         data-dojo-attach-point="messageNode">
     </div>
 </div>
