--- a/resources/ui/widget/components/SelectItemMessage/SelectItemMessage.css
+++ b/resources/ui/widget/components/SelectItemMessage/SelectItemMessage.css
@@ -1,10 +1,28 @@
-.rtcGitConnectorSelectItemMessage:before {
+.rtcGitConnectorSelectItemMessage {
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.rtcGitConnectorSelectItemMessage::after, .rtcGitConnectorSelectItemMessage::before {
     position: absolute;
-    top: 0;
-    left: 50px;
-    height: 10px;
-    width: 15px;
-    content: '';
-    background-color: #cacaca;
-    z-index: -1;
+    bottom: 100%;
+    left: 35px;
+    height: 0;
+    width: 0;
+    border: solid transparent;
+    content: " ";
+    pointer-events: none;
+}
+
+.rtcGitConnectorSelectItemMessage::after {
+    border-bottom-color: #d9edf7; /* backgroundColor */
+    border-width: 15px; /* arrowHeight */
+    margin-left: -15px;
+}
+
+.rtcGitConnectorSelectItemMessage::before {
+    border-bottom-color: #31708f; /* borderColor */
+    border-width: 17px; /* Math.round(borderWidth * Math.sqrt(2)) */
+    margin-left: -17px;
 }
