--- a/resources/ui/widget/components/SelectItemMessage/SelectItemMessage.css
+++ b/resources/ui/widget/components/SelectItemMessage/SelectItemMessage.css
@@ -1,13 +1,16 @@
+/* See: http://www.cssarrowplease.com/ */
 .rtcGitConnectorSelectItemMessage {
     position: relative;
+    width: calc(50% - 35px);
     margin-top: 20px;
     margin-bottom: 10px;
+    margin-left: 11px;
 }
 
 .rtcGitConnectorSelectItemMessage::after, .rtcGitConnectorSelectItemMessage::before {
     position: absolute;
     bottom: 100%;
-    left: 35px;
+    left: 25px;
     height: 0;
     width: 0;
     border: solid transparent;
