--- a/resources/ui/widget/components/ListItem/ListItem.css
+++ b/resources/ui/widget/components/ListItem/ListItem.css
@@ -38,10 +38,12 @@
     transition: transform 500ms;
 }
 
+/* Make the list item button grow and spin once when hovering over the list item. */
 .rtcGitConnectorViewAndSelectListItem:hover .rtcGitConnectorViewAndSelectListItemButton {
     transform: scale(1.5) rotate(360deg);
 }
 
+/* Make the list item button spin once again when the list item is selected (attract attention). */
 .rtcGitConnectorViewAndSelectListItem.selected .rtcGitConnectorViewAndSelectListItemButton {
     transform: scale(1.5) rotate(720deg);
 }
@@ -66,6 +68,7 @@
     opacity: 0.6;
 }
 
+/* Make the "checkButton" have a normal cursor and no animations (disabled). */
 .rtcGitConnectorViewAndSelectListItem.checkButton .rtcGitConnectorViewAndSelectListItemButton {
     color: #555;
     cursor: default;
