Use SetWorkItemValues instead of SetWorkItemAttributes in SelectLinkType

--- a/resources/ui/widget/components/SelectLinkType/SelectLinkType.html
+++ b/resources/ui/widget/components/SelectLinkType/SelectLinkType.html
@@ -27,8 +27,8 @@
     <div data-dojo-attach-point="selectItemMessage"
         data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectItemMessage"></div>
 
-    <div data-dojo-attach-point="setNewWorkItemAttributes"
-        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemAttributes"></div>
+    <div data-dojo-attach-point="setNewWorkItemValues"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemValues"></div>
 
     <div class="rtcGitConnectorListsToLinkContainer">
         <div id="rtcGitConnectorIssuesListToLink" class="rtcGitConnectorListToLink">
