Add a container and label for styling

--- a/resources/ui/widget/components/SetNewWorkItemLinks/SetNewWorkItemLinks.html
+++ b/resources/ui/widget/components/SetNewWorkItemLinks/SetNewWorkItemLinks.html
@@ -1,3 +1,6 @@
 <div>
-    <div data-dojo-attach-point="linksContainer"></div>
+    <div class="rtcGitConnectorViewAndSelectContainer">
+        <div class="rtcGitConnectorLabelText">Set the parent for the new work items</div>
+        <div data-dojo-attach-point="linksContainer"></div>
+    </div>
 </div>
