Set a pinkish background color for duplicate list items

--- a/resources/ui/widget/components/ListItem/ListItem.css
+++ b/resources/ui/widget/components/ListItem/ListItem.css
@@ -6,6 +6,10 @@
     transition: all 0.3s ease-out;
 }
 
+.rtcGitConnectorViewAndSelectListItem.duplicate {
+    background-color: #fbbab7;
+}
+
 .rtcGitConnectorViewAndSelectListItem:hover {
     background-color: #cacaca;
 }
