--- a/resources/ui/widget/components/ListItem/ListItem.html
+++ b/resources/ui/widget/components/ListItem/ListItem.html
@@ -4,4 +4,5 @@
         <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine" data-dojo-attach-point="firstLine"></span>
         <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine" data-dojo-attach-point="secondLine"></span>
     </div>
+    <div class="${baseClass}Button exclamationTriangle" data-dojo-attach-point="itemRightButton"></div>
 </div>
