Show a tooltip when hovering over the warning icon

--- a/resources/ui/widget/components/ListItem/ListItem.css
+++ b/resources/ui/widget/components/ListItem/ListItem.css
@@ -77,5 +77,6 @@
 
 .rtcGitConnectorViewAndSelectListItem .rtcGitConnectorViewAndSelectListItemButton.exclamationTriangle {
     color: darkorange;
+    cursor: help;
     transform: none;
 }
